# photo-organizer-kiro

./: .flake8  .gitignore  Dockerfile  README.txt  REAMDE_2.txt  pyproject.toml  requirements.txt  run_photo_organizer.py  setup.py  simple_copy.py  tensorflow_photo_organizer.py
.github/workflows/: ci.yml
.kiro/specs/photo-organizer/: design.md  requirements.md  tasks.md
docs/: development_notes.md  examples.md  installation.md  quick_start.md  user_guide.md
docs/technical/: api.md  architecture.md  contributing.md  developer_guide.md  directory_structure.md  testing.md
pyinstaller/: windows_installer.nsi
src/photo_organizer/: __init__.py  core.py  main.py  parallel.py  state.py
src/photo_organizer/models/: __init__.py  category.py  category_tree.py  image.py
src/photo_organizer/services/: __init__.py  analysis.py  categorization.py  file_mapping.py  file_operations.py  file_system_manager.py  geolocation.py  image_format.py  metadata_extractor.py  report_export.py  reporting.py
src/photo_organizer/ui/: __init__.py  cli_parser.py  cli_progress.py  file_selection.py  gui_app.py  progress_dialog.py  state_monitor.py
src/photo_organizer/utils/: __init__.py  analyze.py  categorize.py  detect.py  format_detector.py  geocode.py  metadata_viewer.py  similarity.py  vision_analyzer.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_dataset.py  test_end_to_end.py  test_error_handling.py  test_performance.py  test_performance_benchmarks.py
tests/unit/: __init__.py  test_basic.py  test_core.py  test_parallel.py  test_state.py
tests/unit/models/: __init__.py  test_category.py  test_category_tree.py  test_image.py
tests/unit/services/: __init__.py  test_analysis.py  test_categorization.py  test_file_mapping.py  test_file_operations.py  test_file_system_manager.py  test_geolocation.py  test_image_format.py  test_metadata_extractor.py  test_report_export.py
tests/unit/ui/: __init__.py  test_cli_parser.py  test_cli_progress.py  (+4 more)
(+10 files in other folders)
